MODULAR BEAST WORKING

--- a/quart-app/templates/base.html
+++ b/quart-app/templates/base.html
@@ -86,7 +86,11 @@
     <script src="/cdn/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
     
     <!-- Custom JS -->
-    <script src="/static/js/main.js"></script>
+    <script src="/static/js/utils.js"></script>
+    <script src="/static/js/admin.js"></script>
+    <script src="/static/js/chat.js"></script>
+    <script src="/static/js/github-intergration.js"></script>
+    <script src="/static/js/app.js"></script>
     
     <!-- Initialize Prism autoloader -->
     <script>
